syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.dabanshan.grpc.domain";
option java_outer_classname = "UserProto";
option objc_class_prefix = "DBS";

package pb;

message User {
    string id = 1;
    string username = 2;
}

message CreateUserRequest {
    string username = 1;
}

message CreateUserResponse {
    User user = 1;
}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    User user = 1;
}

message GetByUsernameRequest{
    string username = 1;
}

message GetByUsernameResponse{
    User user = 1;
}
